# mini-kafka

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/mini_kafka/: broker.h  broker_metrics.h  client.h  consumer_group.h  crc32.h  flush_policy.h  log.h  log_file_recovery.h  partition_store.h  protocol.h  record.h  segmented_log.h  sparse_index.h  topic.h  version.h
scripts/: cluster_demo.sh
src/: CMakeLists.txt  bench_main.cpp  broker.cpp  broker_main.cpp  broker_metrics.cpp  client.cpp  consume_main.cpp  consumer_group.cpp  crc32.cpp  flush_policy.cpp  group_main.cpp  log.cpp  log_dump_main.cpp  log_file_recovery.cpp  partition_store.cpp  produce_main.cpp  protocol.cpp  record.cpp  segmented_log.cpp  socket_util.cpp  socket_util.h  sparse_index.cpp  topic.cpp  version.cpp
tests/: CMakeLists.txt  broker_client_test.cpp  consumer_group_test.cpp  crc32_test.cpp  flush_policy_test.cpp  log_test.cpp  partition_store_test.cpp  protocol_test.cpp  record_test.cpp  segmented_log_test.cpp  sparse_index_test.cpp  topic_test.cpp  version_test.cpp
